<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fire-Alert Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client_company">ClientCompanyActivity</string>
    <string name="title_activity_inspection">InspectionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_inspection_room">InspectionRoomActivity</string>
    <string name="title_activity_enter_manually">EnterManuallyActivity</string>
    <string name="backnav">Backwards Navigation</string>
    <string name="inspection">Inspection</string>
    <string name="manEnt">Manual Enter</string>
    <string name="entBC">Enter Barcode Number</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="companiesList">Companies List</string>

</resources>
