<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EnterManuallyActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entBC" />

    <EditText
        android:id="@+id/manEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
        	android:id="@+id/cancelManEnter"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:padding="5dp"
        	android:layout_marginRight="5dp"
        	android:background="@drawable/redroundbutton"
        	android:textColor="@android:color/primary_text_dark"
        	android:textSize="20sp"
        	android:text="@string/cancel" />
        
         <Button
        	android:id="@+id/confirmManEnter"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:padding="5dp"
        	android:layout_marginLeft="5dp"
        	android:background="@drawable/redroundbutton"
        	android:textColor="@android:color/primary_text_dark"
        	android:textSize="20sp"
        	android:text="@string/confirm" />
         
    </LinearLayout>

</LinearLayout>
