<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InspectionActivity" >
    <LinearLayout
        android:id="@+id/loadingScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >
    	<ProgressBar
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inspectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
       <ImageButton
           android:id="@+id/inspectionBackNavButton"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:background="#FF2F05"
           android:contentDescription="@string/backnav"
           android:src="@android:drawable/ic_menu_revert" />
       
    	<TextView
        	android:layout_width="0dp"
        	android:layout_height="40dp"
        	android:layout_weight="0.8"
        	android:background="#FF2F05"
        	android:gravity="left|center_vertical"
        	android:textColor="@android:color/primary_text_dark"
        	android:textSize="25sp"
        	android:text="@string/inspection" />
    	
    	<ImageButton
    	    android:id="@+id/inspectionScreenSearchButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="match_parent"
    	    android:background="#FF2F05"
    	    android:contentDescription="@string/manEnt"
    	    android:src="@android:drawable/ic_menu_search" />
            
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/inspectionRoomsPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    	
        <android.support.v4.view.PagerTabStrip
            android:id="@+id/inspectionRoomsTabStrip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:background="#E62A05" />
        
     </android.support.v4.view.ViewPager>

</LinearLayout>
